# pyhifid

./: README.md  setup.cfg  shell.nix
custom_components/pyhifid/: manifest.json  media_player.py  pyhifid
src/pyhifid/: api.py  client.py  hifi.py  main.py  powermate.py
src/pyhifid/backends/: __init__.py  mock_hifi.py  phire_preamp.py
src/pyhifid/backends/utils/: gpio.py
