[metadata]
name = pyhifid
version = 0.0.1
author = Michael Auchter
author_email = a@phire.org
description = Daemon for HiFi systems
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/auchter/pyhifid
project_urls =
    Bug Tracker = https://github.com/auchter/pyhifid/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
install_requires =
    brutefir
    flask
    flask_restful
    gevent
    powermate
    requests

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    pyhifid = pyhifid.main:main
    pyhificli = pyhifid.client:main
